GetAll() Optimized + Pet Operations