@@ -3,7 +3,6 @@ package al.bytesquad.petstoreandclinic.service;
 import al.bytesquad.petstoreandclinic.entity.Manager;
 import al.bytesquad.petstoreandclinic.entity.Role;
 import al.bytesquad.petstoreandclinic.entity.User;
-import al.bytesquad.petstoreandclinic.payload.Response;
 import al.bytesquad.petstoreandclinic.payload.entityDTO.ManagerDTO;
 import al.bytesquad.petstoreandclinic.payload.saveDTO.ManagerSaveDTO;
 import al.bytesquad.petstoreandclinic.repository.ManagerRepository;
@@ -12,17 +11,19 @@ import al.bytesquad.petstoreandclinic.repository.UserRepository;
 import al.bytesquad.petstoreandclinic.search.MySpecification;
 import al.bytesquad.petstoreandclinic.search.SearchCriteria;
 import al.bytesquad.petstoreandclinic.service.exception.ResourceNotFoundException;
+import jakarta.persistence.criteria.Path;
+import jakarta.persistence.criteria.Predicate;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Sort;
 import org.springframework.data.jpa.domain.Specification;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
+import java.security.Principal;
 import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -65,26 +66,47 @@ public class ManagerService {
         return modelMapper.map(newManager, ManagerDTO.class);
     }
 
-    public Response<ManagerDTO> getAll(int pageNo, int pageSize, String sortBy, String sortDir) {
-        Sort sort = sortDir.equalsIgnoreCase(Sort.Direction.ASC.name()) ? Sort.by(sortBy).ascending()
-                : Sort.by(sortBy).descending();
+    public List<ManagerDTO> getAll(String keyword, Principal principal) {
+        List<String> keyValues = List.of(keyword.split(","));
+        HashMap<String, String> pairs = new HashMap<>();
+        for (String s : keyValues) {
+            String[] strings = s.split(":");
+            pairs.put(strings[0], strings[1]);
+        }
 
-        Pageable pageable = PageRequest.of(pageNo, pageSize, sort);
-        Page<Manager> managers = managerRepository.findAll(pageable);
+        List<Manager> managers = managerRepository.findAll((root, query, criteriaBuilder) -> {
+            List<Predicate> predicates = new ArrayList<>();
+            for (String key : pairs.keySet()) {
+                Path<Object> fieldPath = root.get(key);
+                predicates.add(criteriaBuilder.equal(fieldPath, pairs.get(key)));
+            }
+            return criteriaBuilder.and(predicates.toArray(new Predicate[0]));
+        });
 
-        List<Manager> managerList = managers.getContent();
+        List<Manager> filteredManagers;
 
-        List<ManagerDTO> content = managerList.stream().map(manager -> modelMapper.map(manager, ManagerDTO.class)).collect(Collectors.toList());
+        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+        String loggedInEmail = principal.getName();
+        User user = userRepository.findByEmail(loggedInEmail);
+        List<String> userRoles = user.getRoles().stream()
+                .map(Role::getName).toList();
 
-        Response<ManagerDTO> response = new Response<>();
-        response.setContent(content);
-        response.setPageNo(managers.getNumber());
-        response.setPageSize(managers.getSize());
-        response.setTotalElements(managers.getTotalElements());
-        response.setTotalPages(managers.getTotalPages());
-        response.setLast(managers.isLast());
+        String selectedRole = null;
 
-        return response;
+        if (authentication != null && userRoles.contains(authentication.getAuthorities().iterator().next().getAuthority())) {
+            selectedRole = authentication.getAuthorities().iterator().next().getAuthority();
+            // Assuming the authority is in the format "ROLE_{ROLE_NAME}"
+            selectedRole = selectedRole.substring("ROLE_".length()).toLowerCase();
+        }
+
+        if (selectedRole.equals("admin"))
+            filteredManagers = managers;
+        else
+            filteredManagers = null;
+
+        if (filteredManagers == null)
+            return null;
+        return filteredManagers.stream().map(manager -> modelMapper.map(manager, ManagerDTO.class)).collect(Collectors.toList());
     }
 
     public ManagerDTO getById(long id) {
